syntax = "proto2";

package common;

message Range {
  required uint64 start = 1;
  required uint64 end = 2;
}

message RangeInclusive {
  required uint64 start = 1;
  required uint64 end = 2;
}

message RangeInclusiveList { repeated RangeInclusive elements = 1; }
